fix(checkstyle): resolve NeedBraces and MethodLength violations